--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
 body {
-  @apply font-body;
+  @apply font-body text-gray-600;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  @apply font-bold font-display;
+  @apply font-semibold font-display;
 }
 
 h1 {
@@ -24,4 +24,8 @@ h4 {
 
 h5 {
   @apply text-lg;
+}
+
+strong {
+  @apply font-bold;
 }
