style: Add margin to heading

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  @apply font-semibold font-display;
+  @apply font-semibold font-display mt-6 mb-4;
 }
 
 h1 {
