feat: Add resume page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,3 +33,11 @@ strong {
 .normal-emoji-weight {
   font-weight: normal !important;
 }
+
+ul {
+  @apply list-disc pl-6;
+}
+
+ol {
+  @apply list-decimal;
+}
