--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,5 @@
 body {
-  @apply font-body text-white font-medium;
-  background: url('/img/bg-tile-green.jpg');
+  @apply font-body font-medium text-gray-dark;
 }
 
 h1, h2, h3, h4, h5, h6 {
