fix: layout issue

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const optimizedBackground = await getImage({
 })
 ---
 
-<div class="my-8 text-sm">
+<div class="my-8 text-sm px-2 sm:px-0">
   <div
     class="w-full h-2 bg-repeat-x opacity-50"
     style={`background-image: url(${optimizedBackground.src});`}
