--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -38,7 +38,7 @@ const optimizedBackground = await getImage({
       tech since age 8.
     </p>
 
-    <ul class="flex gap-3">
+    <ul class="flex gap-3 flex-wrap justify-center">
       <li class="flex items-center gap-1 opacity-60">
         <Icon name="ph:map-pin" /> Jakarta, Indonesia
       </li>
