--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -4,7 +4,7 @@ import SectionTitle from './SectionTitle.astro'
 
 <SectionTitle title="Recent Experiences" />
 
-<ul class="flex flex-col gap-4">
+<ul class="flex flex-col gap-4 px-2 sm:px-0">
   <li class="flex flex-col gap-1">
     <p class="text-sm opacity-60">2022-2024</p>
     <h3>Lead Software Engineer, Mazecare</h3>
