--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ import SectionTitle from './SectionTitle.astro'
 <div class="flex flex-col gap-4">
   <SectionTitle title="Project Showcase" />
 
-  <ul class="flex flex-col gap-4 p-2 sm:p-0">
+  <ul class="flex flex-col gap-4 px-2 sm:px-0">
     <ProjectCard
       image={communityScreenshot}
       title="Community"
