--- a/src/components/SectionTitle.astro
+++ b/src/components/SectionTitle.astro
@@ -14,7 +14,7 @@ interface Props {
 const { title } = Astro.props
 ---
 
-<div class="flex items-center gap-4 p-2 sm:p-0">
+<div class="flex items-center gap-4 px-2 sm:px-0">
   <h2 class="font-medium text-xl flex-shrink-0 title">{title}</h2>
   <div
     class="w-full h-2 bg-repeat-x opacity-50"
