fix: missing avatar

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@ const optimizedBackground = await getImage({
       class="absolute -mb-10 bottom-0 z-20 w-full flex items-center justify-center"
     >
       <img
-        src="https://media.licdn.com/dms/image/D5603AQHnyvmlb_xTsw/profile-displayphoto-shrink_200_200/0/1706633774570?e=1726704000&v=beta&t=6JnKmACA-XQuyujWSVXl7hRnhsGUxpYDY1vQb3Q_kpQ"
+        src="https://s3.stanley.id/1706633774571.jpeg"
         alt="Image"
         class="w-28 h-28 rounded-full border-4 border-white"
       />
